--- a/BattagliaNavale_5H_Gruppo4/BattagliaNavale_5H_Gruppo4.csproj
+++ b/BattagliaNavale_5H_Gruppo4/BattagliaNavale_5H_Gruppo4.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\PlayGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
