--- a/BattagliaNavale_5H_Gruppo4/BattagliaNavale_5H_Gruppo4.csproj
+++ b/BattagliaNavale_5H_Gruppo4/BattagliaNavale_5H_Gruppo4.csproj
@@ -46,7 +46,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\PlayGame.cs" />
+    <Compile Include="Behavior\PlayGame.cs" />
+    <Compile Include="Models\ClientMessage.cs" />
+    <Compile Include="Models\ServerMessage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -54,5 +56,6 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
