Working on OnMessagge method

--- a/BattagliaNavale_5H_Gruppo4/BattagliaNavale_5H_Gruppo4.csproj
+++ b/BattagliaNavale_5H_Gruppo4/BattagliaNavale_5H_Gruppo4.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Behavior\PlayGame.cs" />
     <Compile Include="Models\ClientMessage.cs" />
+    <Compile Include="Models\ClientShips.cs" />
     <Compile Include="Models\Messages.cs" />
     <Compile Include="Models\ServerMessage.cs" />
     <Compile Include="Program.cs" />
